--- a/README
+++ b/README
@@ -2,12 +2,12 @@ Apple Website Clone
 Este projeto é uma réplica de um website da Apple, construído utilizando React, TailwindCSS e Vite. O objetivo é reproduzir o design limpo e minimalista da Apple, além de utilizar tecnologias modernas de desenvolvimento web para oferecer uma experiência rápida e responsiva.
 
 Tecnologias Utilizadas
-React: Biblioteca JavaScript para construção de interfaces de usuário.
-TailwindCSS: Framework CSS para criar layouts personalizados de maneira rápida e eficiente.
-Vite: Ferramenta de build moderna para projetos web que proporciona um ambiente de desenvolvimento rápido e otimizado.
+-React: Biblioteca JavaScript para construção de interfaces de usuário.
+-TailwindCSS: Framework CSS para criar layouts personalizados de maneira rápida e eficiente.
+-Vite: Ferramenta de build moderna para projetos web que proporciona um ambiente de desenvolvimento rápido e otimizado.
 Funcionalidades
-Navegação responsiva: O site se adapta a diferentes tamanhos de tela, incluindo dispositivos móveis.
-Página inicial estilosa: Layout elegante que espelha o design da Apple.
-Componentes reutilizáveis: Utilização de componentes React modulares e reutilizáveis.
-Animações e transições: Animações suaves para uma experiência de usuário aprimorada.
-Performance otimizada: Utilização do Vite para uma experiência de desenvolvimento rápida e otimizada.
+-Navegação responsiva: O site se adapta a diferentes tamanhos de tela, incluindo dispositivos móveis.
+-Página inicial estilosa: Layout elegante que espelha o design da Apple.
+-Componentes reutilizáveis: Utilização de componentes React modulares e reutilizáveis.
+-Animações e transições: Animações suaves para uma experiência de usuário aprimorada.
+-Performance otimizada: Utilização do Vite para uma experiência de desenvolvimento rápida e otimizada.
